# project-2026

./: .gitignore  README.md  analysis.ipynb  app.py  dashboard.html  lfw.rules  makefile  results.csv  start.sh  virtual_simulator.py
AI-Powered Smart Local Services Marketplace11/: README.md  package-lock.json
AI-Powered Smart Local Services Marketplace11/Backend/: .env  models.js  package.json  server.js
AI-Powered Smart Local Services Marketplace11/localsmart/backend/: package-lock.json  package.json
Aanchal_singh/: .env.example  .gitignore  DEPLOYMENT.md  PROJECT_GUIDE.md  README.md  SECURITY.md  package-lock.json  package.json  render.yaml
Aanchal_singh/client/: .env.example  package-lock.json  package.json  tailwind.config.js  vercel.json
Aanchal_singh/client/public/: index.html  manifest.json
Aanchal_singh/client/src/: App.js  index.css  index.js
Aanchal_singh/client/src/components/common/: Chatbot.js  Chatbot.test.js  Footer.js  LoadingScreen.js  Navbar.js  ProtectedRoute.js  Sidebar.js  index.js
Aanchal_singh/client/src/components/layout/: Layout.js
Aanchal_singh/client/src/context/: AuthContext.js  SocketContext.js
Aanchal_singh/client/src/hooks/: useHooks.js
Aanchal_singh/client/src/pages/: Landing.js  NotFound.js  index.js
Aanchal_singh/client/src/pages/admin/: AdminAnnouncements.js  AdminDashboard.js  AnalyticsPage.js  HospitalsManagement.js  RequestsManagement.js  UsersManagement.js
Aanchal_singh/client/src/pages/auth/: Login.js  (+2 more)
Aanchal_singh/client/src/services/: api.js
Aanchal_singh/client/src/utils/: helpers.js
Aanchal_singh/scripts/: clean_repo.ps1
Aanchal_singh/server/: index.js
Aanchal_singh/server/config/: constants.js  database.js  origins.js
Aanchal_singh/server/middleware/: auth.js  errorHandler.js  security.js  validators.js
Aanchal_singh/server/models/: BloodRequest.js  BloodStock.js  Donation.js  DonorProfile.js  Hospital.js  Notification.js  Schedule.js  User.js  index.js
Aanchal_singh/server/routes/: admin.routes.js  auth.routes.js  donor.routes.js  hospital.routes.js  index.js  notification.routes.js  request.routes.js  schedule.routes.js  stats.routes.js
Aanchal_singh/server/scripts/: fixIndexes.js  hospitalSmokeTest.js  platformSmokeTest.js  seed.js  seedHospitals.js  seedRanchiHospitals.js
Aanchal_singh/server/services/: donorStatsService.js  emailService.js  scheduledJobs.js
Aanchal_singh/server/socket/: socketHandler.js
Ai-smart-Attendance-System/: .gitignore  installed.txt  main.py  requirements.txt
Ai-smart-Attendance-System/src/components/: dialog_add_photo.py  dialog_attendance_results.py  dialog_auto_enroll.py  dialog_create_subject.py  dialog_enroll.py  dialog_share_subject.py  dialog_voice_attendance.py  footer.py  header.py  subject_card.py
Ai-smart-Attendance-System/src/database/: config.py  db.py
Ai-smart-Attendance-System/src/pipelines/: face_pipeline.py  voice_pipeline.py
Ai-smart-Attendance-System/src/screens/: home_screen.py  student_screen.py  teacher_screen.py
Ai-smart-Attendance-System/src/ui/: base_layout.py
Attendance-List-Generator/static/css/: style.css
Attendance-List-Generator/static/js/: app.js
Attendance-List-Generator/templates/: index.html
CampusConnect.git/: README.md
QuantDev/: CMakeLists.txt  gen_synopsis.py  pyproject.toml  run_sim.py  trades.csv
QuantDev/examples/: bench_matching.py  market_maker.py  signal_strategy.py  stat_arb.py  twap.py
QuantDev/include/hft_simulator/: bot_sim.hpp  engine.h  feed.hpp  matching.hpp  metrics.hpp  options.hpp  order.hpp  orderbook.hpp  report.hpp  risk.hpp  sim_core.hpp  sim_core_options.hpp  ws_client.hpp
QuantDev/include/hft_simulator/strategies/: strategy_params.hpp
QuantDev/python/: bindings.cpp
QuantDev/python/quantsim/: __init__.py  analytics.py  backtester.py  dashboard.py  strategy.py
QuantDev/python/quantsim/data/: __init__.py  cli.py  replay.py  synthetic.py
QuantDev/python/quantsim/data/providers/: __init__.py  alpaca_feed.py  base.py  yfinance_feed.py
QuantDev/python/quantsim/live/: __init__.py  engine.py  feed.py  gateway.py  protocol.py  risk.py  run.py
QuantDev/python/quantsim/live/strategies/: __init__.py  execution.py  market_maker.py  mean_reversion.py  momentum.py
QuantDev/python/quantsim/research/: __init__.py  report.py  signals.py  walkforward.py
QuantDev/reports/: QuantSim_Print_Merged.tex
QuantDev/src/: benchmark.cpp  bot_sim.cpp  main.cpp  orderbook.cpp  test_bot.cpp
QuantDev/strategies/: breakout_strategy.cpp  rsi_strategy.cpp
QuantDev/tests/: test_live.py  test_orderbook.cpp
QuickGPT/: package-lock.json
QuickGPT/client/: package-lock.json
QuickGPT/client/src/components/: ChatBox.jsx
QuickGPT/server/: package-lock.json  package.json
QuickGPT/server/configs/: db.js
QuickGPT/server/controllers/: messageController.js
SyncForge/: README.md  docker-compose.yml
SyncForge/backend/: Dockerfile  pom.xml
SyncForge/frontend/syncforge_frontend/: README.md  pubspec.yaml
SyncForge/frontend/syncforge_frontend/lib/: main.dart
SyncForge/frontend/syncforge_frontend/linux/: CMakeLists.txt
SyncForge/frontend/syncforge_frontend/test/: widget_test.dart
SyncForge/frontend/syncforge_frontend/web/: index.html  manifest.json
SyncForge/frontend/syncforge_frontend/windows/: CMakeLists.txt
include/: lfw_bpf.h  lfw_bpf_shared.h  lfw_rules.h  lfw_types.h
include/hft_simulator/: benchmark.h  latency_hist.hpp  market.h  multi_asset.hpp  sim_core_portfolio.hpp  strategy.h
include/hft_simulator/strategies/: custom_strat_api.hpp
python/quantsim/live/: binance.py
reports/: QuantSim_Dissertation.tex  QuantSim_Dissertation_Affan.tex  QuantSim_Dissertation_Overall.tex  QuantSim_Dissertation_Shakir.tex
src/: app_imgui.cpp  bench_lob.cpp  engine.cpp  feed_replay.cpp  itch_parser.cpp  lfw_bpf.c  lfw_bpf_loader.c  lfw_bpf_sync.c  lfw_config.c  lfw_engine.c  lfw_rules.c  live_trader.cpp  main.c  market.cpp  matching.cpp  strategy.cpp
strategies/: mean_reversion_strategy.cpp  momentum_strategy.cpp  strategy_2.cpp
templates/: form.html
tests/: test_matching.cpp
(+133 files in other folders)
