[build-system]
requires = ["scikit-build-core>=0.3", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name        = "quantsim"
version     = "0.1.0"
description = "Full-platform quantitative developer simulator: LOB matching engine, strategy framework, analytics"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rich>=13.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev    = ["pytest", "pytest-benchmark", "pandas"]
data   = ["yfinance>=0.2.18", "pyarrow>=12.0"]
alpaca = ["alpaca-py>=0.8.2", "pyarrow>=12.0"]
all    = ["yfinance>=0.2.18", "alpaca-py>=0.8.2", "pyarrow>=12.0"]

[project.scripts]
quantsim-mm    = "quantsim.examples.market_maker:run"
quantsim-sa    = "quantsim.examples.stat_arb:run"
quantsim-data  = "quantsim.data.cli:main"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages   = ["python/quantsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
